--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TreeCompany</string>
+    <string name="samen_werken_aan_een_ide_e_ale_wereld">Samen werken aan een ide(e)ale wereld</string>
+    <string name="city_of_ideas">City of Ideas</string>
+    <string name="copyright">© The Tree Company - 2019</string>
 </resources>
