--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,9 @@
     <string name="menu_questionnaires">Vragenlijsten</string>
     <string name="menu_info">Info</string>
     <string name="menu_settings">Instellingen</string>
-    <string name="connection_retry">Geen verbinding, opnieuw proberen</string>
-    <string name="connection_fail">Geen verbinding mogelijk, app wordt afgesloten</string>
+    <string name="connection_title">Verbindingsfout</string>
+    <string name="connection_msg">Geen verbinding, opnieuw proberen?</string>
+    <string name="connection_dialog_retry">Opnieuw</string>
+    <string name="connection_dialog_close">Afsluiten</string>
 
 </resources>
