--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,10 @@
     <string name="home_fragment">IK BEN DE HOME FRAGMENT RAWR RAWR</string>
     <string name="settings_fragment">IK BEN DE INSTELLINGEN FRAGMENT HIE HIE</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="stem">Stemmen</string>
+    <string name="reageer">Reageren</string>
+
 </resources>
