--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,8 @@
     <string name="project_list_likes">#</string>
     <string name="project_list_shares">#</string>
     <string name="project_list_ideas">#</string>
+    <string name="project_list_filter_tv">Filter</string>
+    <string name="project_list_projects_tv">Projecten</string>
+    <string name="project_list_comments">#</string>
 
 </resources>
