--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,13 @@
     <string name="connection_dialog_close">Afsluiten</string>
     <string name="projecttitle">ProjectTitle</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="huidige_fase">Huidige Fase</string>
+    <string name="phasename">PhaseName</string>
+    <string name="progress">Progress</string>
+    <string name="start_van_het_project">Start van het project:</string>
+    <string name="einde_van_het_project">Einde van het project:</string>
+    <string name="dateformat">--/--/--</string>
+
 </resources>
