--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,15 +8,12 @@
     <string-array name="loadingScreen">
         <item>Jouw ideeën zijn goud waard!</item>
         <item>Samen werken aan een ide(e)ale wereld!</item>
-
     </string-array>
 
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="login_email">Email</string>
     <string name="password">Wachtwoord</string>
     <string name="login_btn">Login</string>
-    <string name="startup_register_btn">Nog geen account? Registreer hier!</string>
+    <string name="startup_register_btn">Registreren</string>
     <string name="forgot_password_btn">Wachtwoord vergeten?</string>
     <string name="login_google_btn">Google</string>
     <string name="login_microsoft_btn">Microsoft</string>
@@ -24,6 +21,7 @@
     <string name="register_name">Naam</string>
     <string name="confirm_password">Bevestig wachtwoord</string>
     <string name="birthday">Geboortedatum</string>
+
     <string name="title_activity_main">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -38,23 +36,19 @@
     <string name="menu_questionnaires">Vragenlijsten</string>
     <string name="menu_info">Info</string>
     <string name="menu_settings">Instellingen</string>
-    <string name="connection_title">Verbindingsfout</string>
-    <string name="connection_msg">Geen verbinding, opnieuw proberen?</string>
-    <string name="connection_dialog_retry">Opnieuw</string>
-    <string name="connection_dialog_close">Afsluiten</string>
+    <string name="dialog_connection_title">Verbindingsfout</string>
+    <string name="dialog_connection_msg">Geen verbinding, opnieuw proberen?</string>
+    <string name="dialog_connection_retry">Opnieuw</string>
+    <string name="dialog_connection_shutdown">Afsluiten</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="settings_fragment">IK BEN DE INSTELLINGEN FRAGMENT HIE HIE</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="stem">Stemmen</string>
     <string name="reageer">Reageren</string>
 
     <string name="project_list_current_fase_tv">Laatste fase:</string>
     <string name="project_list_project_name_tv">Projectnaam</string>
-    <string name="project_list_project_img_dsc">Project afbeelding</string>
     <string name="project_list_project_status_tv">Project status</string>
     <string name="project_list_likes">#</string>
     <string name="project_list_shares">#</string>
@@ -71,5 +65,8 @@
         <item>Likes</item>
         <item>Reacties</item>
     </string-array>
+
+    <string name="pref_platform_id">pref_platform_id</string>
+    <string name="dialog_platform_pref_title">Kies je platform:</string>
 
 </resources>
